<resources>
    <string name="app_name">Android API Guides</string>
    <string name="app_cover_name">Android API Guides 1.2</string>
    <string name="msg_exit_hint">Click again to exit</string>
    <string name="left_title">Contents</string>
	<string name="left_title_et_hint">Search</string>
    <string name="content_home">Android API Guide 1.2</string>
    <string name="setting">Setting</string>
    <string name="sync">Sync</string>
    <string name="sync_flag">Only By WiFI/3G</string>
    <string name="last_read_content">Last Read Content</string>
    <string name="continue_btn">Continue</string>
    <string name="about">About</string>
    <string name="introduce">
		Android API is application which displays all the content at: http://developer.android.com/guide/components/index.html.
	</string>
	<string name="contact_title">Contact</string>
	<string name="contact">tangqi1101@gmail.com</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="version_update"><![CDATA[
        Recent changes:\n1 Update UI \n2 Get latest content list from official website \n3 Fix some bugs
    ]]></string>
    <string-array name="branch_array">
        <item>1,Introduction</item>
		<item>2,App Components</item>
		<item>3,App Resources</item>
		<item>4,App Manifest</item>
		<item>5,User Interface</item>
		<item>6,Animation and Graphics</item>
		<item>7,Computation</item>
		<item>8,Media and Camera</item>
		<item>9,Location and Sensors APIs</item>
		<item>10,Connectivity</item>
		<item>11,Text and Input</item>
		<item>12,Data Storage</item>
		<item>13,Administration</item>
		<item>14,Web Apps</item>
		<item>15,Best Practices</item>
    </string-array>
    <string-array name="array1">
        <item>1,L1,0,Introduction,http://developer.android.com/guide/index.html</item>
        <item>2,L2,1,App Fundamentals,http://developer.android.com/guide/components/fundamentals.html</item>
        <item>3,L2,1,Device Compatibility,http://developer.android.com/guide/practices/compatibility.html</item>
        <item>4,L2,1,System Permissions,http://developer.android.com/guide/topics/security/permissions.html</item>
    </string-array>
    <string-array name="array2">
        <item>1,L1,0,App Components,http://developer.android.com/guide/components/index.html</item>
        <item>2,L2,1,Intents and Intent Filters,http://developer.android.com/guide/components/intents-filters.html</item>
        	<item>3,L3,2,Common Intents,http://developer.android.com/guide/components/intents-common.html</item>
        <item>4,L2,1,Activities,http://developer.android.com/guide/components/activities.html</item>
			<item>5,L3,4,Fragments,http://developer.android.com/guide/components/intents-common.html</item>
			<item>6,L3,4,Loaders,http://developer.android.com/guide/components/loaders.html</item>
			<item>7,L3,4,Tasks and Back Stack,http://developer.android.com/guide/components/tasks-and-back-stack.html</item>
		<item>8,L2,1,Services,http://developer.android.com/guide/components/services.html</item>
			<item>9,L3,8,Bound Services,http://developer.android.com/guide/components/bound-services.html</item>
			<item>10,L3,8,AIDL,http://developer.android.com/guide/components/aidl.html</item>
	    <item>11,L2,1,Content Providers,http://developer.android.com/guide/topics/providers/content-providers.html</item>
	    	<item>12,L3,11,Content Provider Basics,http://developer.android.com/guide/topics/providers/content-provider-basics.html</item>
			<item>13,L3,11,Creating a Content Provider,http://developer.android.com/guide/topics/providers/content-provider-creating.html</item>
			<item>14,L3,11,Calendar Provider,http://developer.android.com/guide/topics/providers/calendar-provider.html</item>
			<item>15,L3,11,Contacts Provider,http://developer.android.com/guide/topics/providers/contacts-provider.html</item>
			<item>16,L3,11,Storage Access Framework,http://developer.android.com/guide/topics/providers/document-provider.html</item>
		<item>17,L2,1,App Widgets,http://developer.android.com/guide/topics/appwidgets/index.html</item>
	    	<item>18,L3,17,App Widget Host,http://developer.android.com/guide/topics/appwidgets/host.html</item>
	    <item>19,L2,1,Processes and Threads,http://developer.android.com/guide/components/processes-and-threads.html</item>
    </string-array>
    <string-array name="array3">
        <item>1,L1,0,App Resources,http://developer.android.com/guide/topics/resources/index.html</item>
        <item>2,L2,1,Overview,http://developer.android.com/guide/topics/resources/overview.html</item>
        <item>3,L2,1,Providing Resources,http://developer.android.com/guide/topics/resources/providing-resources.html</item>
        <item>4,L2,1,Accessing Resources,http://developer.android.com/guide/topics/resources/accessing-resources.html</item>
        <item>5,L2,1,Localizing with Resources,http://developer.android.com/guide/topics/resources/localization.html</item>
        <item>6,L2,1,Resource Types,http://developer.android.com/guide/topics/resources/available-resources.html</item>
	        <item>7,L3,6,Animation,http://developer.android.com/guide/topics/resources/animation-resource.html</item>
	        <item>8,L3,6,Color State List,http://developer.android.com/guide/topics/resources/color-list-resource.html</item>
	        <item>9,L3,6,Drawable,http://developer.android.com/guide/topics/resources/drawable-resource.html</item>
	        <item>10,L3,6,Layout,http://developer.android.com/guide/topics/resources/layout-resource.html</item>
	        <item>11,L3,6,Menu,http://developer.android.com/guide/topics/resources/menu-resource.html</item>
	        <item>12,L3,6,String,http://developer.android.com/guide/topics/resources/string-resource.html</item>
	        <item>13,L3,6,Style,http://developer.android.com/guide/topics/resources/style-resource.html</item>
	        <item>14,L3,6,More Types,http://developer.android.com/guide/topics/resources/more-resources.html</item>
    </string-array>
    <string-array name="array4">
        <item>1,L1,0,App Manifest,http://developer.android.com/guide/topics/manifest/manifest-intro.html</item>
        <item>2,L2,1,<![CDATA[<action>]]>,http://developer.android.com/guide/topics/manifest/action-element.html</item>
        <item>3,L2,1,<![CDATA[<activity>]]>,http://developer.android.com/guide/topics/manifest/activity-element.html</item>
        <item>4,L2,1,<![CDATA[<activity-alias>]]>,http://developer.android.com/guide/topics/manifest/activity-alias-element.html</item>
        <item>5,L2,1,<![CDATA[<application>]]>,http://developer.android.com/guide/topics/manifest/application-element.html</item>
        <item>6,L2,1,<![CDATA[<category>]]>,http://developer.android.com/guide/topics/manifest/category-element.html</item>
        <item>7,L2,1,<![CDATA[<compatible-screens>]]>,http://developer.android.com/guide/topics/manifest/compatible-screens-element.html</item>
        <item>8,L2,1,<![CDATA[<data>]]>,http://developer.android.com/guide/topics/manifest/data-element.html</item>
        <item>9,L2,1,<![CDATA[<grant-uri-permission>]]>,http://developer.android.com/guide/topics/manifest/activity-alias-element.html</item>
        <item>10,L2,1,<![CDATA[<instrumentation>]]>,http://developer.android.com/guide/topics/manifest/instrumentation-element.html</item>
        <item>11,L2,1,<![CDATA[<intent-filter>]]>,http://developer.android.com/guide/topics/manifest/intent-filter-element.html</item>
        <item>12,L2,1,<![CDATA[<manifest>]]>,http://developer.android.com/guide/topics/manifest/manifest-element.html</item>
        <item>13,L2,1,<![CDATA[<meta-data>]]>,http://developer.android.com/guide/topics/manifest/meta-data-element.html</item>
        <item>14,L2,1,<![CDATA[<path-permission>]]>,http://developer.android.com/guide/topics/manifest/path-permission-element.html</item>
        <item>15,L2,1,<![CDATA[<permission>]]>,http://developer.android.com/guide/topics/manifest/application-element.html</item>
        <item>16,L2,1,<![CDATA[<permission-group>]]>,http://developer.android.com/guide/topics/manifest/permission-group-element.html</item>
        <item>17,L2,1,<![CDATA[<permission-tree>]]>,http://developer.android.com/guide/topics/manifest/permission-tree-element.html</item>
        <item>18,L2,1,<![CDATA[<provider>]]>,http://developer.android.com/guide/topics/manifest/provider-element.html</item>
        <item>19,L2,1,<![CDATA[<receiver>]]>,http://developer.android.com/guide/topics/manifest/receiver-element.html</item>
        <item>20,L2,1,<![CDATA[<service>]]>,http://developer.android.com/guide/topics/manifest/service-element.html</item>
        <item>21,L2,1,<![CDATA[<supports-gl-texture>]]>,http://developer.android.com/guide/topics/manifest/supports-gl-texture-element.html</item>
        <item>22,L2,1,<![CDATA[<supports-screens>]]>,http://developer.android.com/guide/topics/manifest/supports-screens-element.html</item>
        <item>23,L2,1,<![CDATA[<uses-configuration>]]>,http://developer.android.com/guide/topics/manifest/uses-configuration-element.html</item>
        <item>24,L2,1,<![CDATA[<uses-feature>]]>,http://developer.android.com/guide/topics/manifest/uses-feature-element.html</item>
        <item>25,L2,1,<![CDATA[<uses-library>]]>,http://developer.android.com/guide/topics/manifest/uses-library-element.html</item>
        <item>26,L2,1,<![CDATA[<uses-permission>]]>,http://developer.android.com/guide/topics/manifest/uses-permission-element.html</item>
        <item>27,L2,1,<![CDATA[<uses-sdk>]]>,http://developer.android.com/guide/topics/manifest/uses-sdk-element.html</item>       
    </string-array>
</resources>