<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="220dp"
    android:layout_height="fill_parent"
    android:background="@color/bg_color_deep" >
    
        <TextView
            android:id="@+id/title"
            android:layout_width="220dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:paddingRight="5dp"
            android:text="@string/setting"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:layout_width="220dp"
            android:layout_height="33dp"
            android:background="@color/header_color"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="5dp"
            android:text="@string/sync"
            android:textColor="@color/white"
            android:textSize="13sp" />
                
<!--         <include
            android:id="@+id/line"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            layout="@layout/line">
        </include> -->
<!--         <Button
            android:id="@+id/clearBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_all" /> -->

        <RelativeLayout
            android:layout_width="220dp"
            android:layout_height="55dp" >
            
            <TextView
            android:id="@+id/syncDesc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            android:gravity="center_vertical"
            android:text="@string/sync_flag" 
            android:textColor="@color/black"/>

        	<ToggleButton
        	    android:id="@+id/syncFlagBtn"
        	    android:layout_width="80dp"
        	    android:layout_height="44dp"
        	    android:layout_alignParentRight="true"
        	    android:layout_centerVertical="true"
        	    android:gravity="center_vertical|center_horizontal"
        	    android:text="ToggleButton"
        	    android:textColor="@color/black"
        	    android:textOff="Off"
        	    android:textOn="On" />

        </RelativeLayout>
        
        <TextView
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:background="@color/header_color"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="5dp"
            android:text="@string/last_read_content"
            android:textColor="@color/white"
            android:textSize="13sp" />
        
        <TextView
            android:id="@+id/lstReadTV"
            android:layout_width="220dp"
            android:layout_height="80dp"
            android:paddingLeft="8dp"
            android:paddingRight="5dp"
            android:textColor="@color/black"
            android:textSize="13sp" />
        
        <Button
            android:id="@+id/gotoBtn"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="right"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:padding="5dp"
            android:text="@string/continue_btn"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_continue_style"  />

        <!-- About -->
        <TextView
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:background="@color/header_color"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="5dp"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="13sp" />
                
        <TextView
            android:id="@+id/introduce"
            android:layout_width="220dp"
            android:layout_height="85dp"
            android:layout_marginLeft="5dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/introduce"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <!-- Contact -->
        <TextView
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:background="@color/header_color"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="5dp"
            android:text="@string/contact_title"
            android:textColor="@color/white"
            android:textSize="13sp" />
                
        <TextView
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/contact"
            android:textColor="#2353FE"
            android:textSize="13sp" />
</LinearLayout>